--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+  "post-install-cmd": [
+    "php artisan clear-compiled",
+    "chmod -R 777 public/"
+  ]
   "require": {
     "monolog/monolog": "1.0.*"
   }
