--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,19 @@
 {
+  "name": "vendor_name/RentalWebsite",
+  "description": "description",
+  "minimum-stability": "stable",
+  "license": "proprietary",
+  "authors": [
+    {
+      "name": "mansito",
+      "email": "email@example.com"
+    }
+  ],
+  "require": {
+    "monolog/monolog": "1.0.*"
+  },
   "post-install-cmd": [
     "php artisan clear-compiled",
     "chmod -R 777 public/"
   ]
-  "require": {
-    "monolog/monolog": "1.0.*"
-  }
 }
